--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,6 +11,7 @@
     tools:context="com.example.jpedretti.masterindandroidapp.SplashActivity">
 
     <RelativeLayout
+        android:id="@+id/splash_info_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true">
@@ -30,5 +31,13 @@
             android:layout_centerHorizontal="true"/>
 
     </RelativeLayout>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/splash_info_layout"
+        android:layout_centerHorizontal="true"
+        android:indeterminate="true"
+        tools:visibility="visible" />
 
 </RelativeLayout>
