--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -4,11 +4,9 @@
     android:layout_height="match_parent"
     tools:context="com.example.jpedretti.masterindandroidapp.fragments.ListFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/list_text"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/list_fragment" />
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
